2025-05-05_kubernetes/kubernetes-training-counter-example/manifests/backend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter
          resources:
            requests:
              cpu: 20m
              memory: 30Mi
            limits:
              cpu: 50m
              memory: 60Mi
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /readyz
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 1
          livenessProbe:
            httpGet:
              path: /livez
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
