2025-05-05_kubernetes/kubernetes-training-counter-example/manifests/frontend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter-frontend
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 300m
              memory: 300Mi
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/livez
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 1
          livenessProbe:
            httpGet:
              path: /api/livez
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
