2025-05-05_kubernetes/kubernetes-training-counter-example/manifests/backend_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - backend.k8s.sikademo.com
      secretName: backend.k8s.sikademo.com-tls
  rules:
    - host: backend.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
